--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.13.0",
     "recharts": "^2.15.2",
+    "resend": "^6.9.2",
     "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
     "superjson": "^1.13.3",
